wrong solution uku

--- a/Fissure/tests/2_randsmall_01.in
+++ b/Fissure/tests/2_randsmall_01.in
@@ -1,4 +1,34 @@
-3
-oxo
-xxx
-oxo
+33
+oxoxoooooooooooooooooooooooooxooo
+oxoxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+oxoxoooooxoxoxoxoxoxoooooooooxoxo
+oxoxoooooxoxoxoxoxoxoooooooooxoxo
+oxoxoooooxoxoxoxoxoxoooooooooxoxo
+oxoxoooooxoxoxoxoxxxxxxxxxxxxxoxo
+oxoxoooooxoxoxoxoxoxoooooooooxoxo
+oxoxxxxxxxxxoxoxxxxxxxxxxxxxxxoxo
+oxoxoooooxoxoxoxoxoooooooxoooxoxo
+oxoxxxxxxxxxxxoxoxxxxxxxxxxxxxoxo
+oxoxoooooooxoxoxoxoooooooxoooxoxo
+oxoxoooooooxoxxxxxxxxxxxxxxxxxoxo
+oxoxoooooooxoxoxoooooooooooooxoxo
+oxoxxxxxxxxxxxxxxxxxxxxxxxxxxxoxo
+oxoxoxoooooooxoxoxoxoooooxoooxoxo
+xxxxoxoooooooxoxxxxxoooooxoooxoxo
+oxoxoxoooooooxoxoxoxoooooxoooxoxo
+oxoxxxxxxxxxxxxxxxxxoooooxoooxoxo
+oxoxoxoxoxoxoxoxoxoxoooooxoooxoxo
+oxoxoxoxoxoxoxoxoxoxxxxxxxxxxxxxx
+oxoxoxoxoxoxoxoxoxoxoxoooxoxoxoxo
+oxoxoxxxxxxxxxoxxxxxxxxxxxxxxxoxo
+oxoxoxoxoxoxoxoxoxoxoxoooxoxoxoxo
+oxoxoxxxxxxxxxxxxxxxxxxxxxxxxxoxo
+oxoxoxoooxoooxoxoooxoooooooooxoxo
+oxoxoxoooxoooxxxxxxxoooooooooxoxo
+oxoxoxoooxoooxoxoooxoooooooooxoxo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+oxoxoooooooooooooooooooooooooooxo
+oxoxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+oxoxoooooooooooooooxoooooooooooxo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxo
+oxoxoooooooooooooooxoooooooooooxo
