--- a/Fissure/tests/2_randsmall_06.in
+++ b/Fissure/tests/2_randsmall_06.in
@@ -1,8 +1,12 @@
-7
-oxoxoxo
-xxxxoxo
-oxoxoxo
-xxxxxxo
-oooxoxo
-xxxxxxx
-oooooxo
+11
+oxoxoxoooxo
+oxxxxxxxxxx
+oxoxoxoxoxo
+oxoxoxxxxxo
+oxoxoxoxoxo
+oxxxxxxxxxx
+oxoxoxoxooo
+oxxxxxxxxxx
+oxoxoxoxooo
+xxxxxxxxxxx
+oxooooooooo
