--- a/Fissure/tests/2_randsmall_07.in
+++ b/Fissure/tests/2_randsmall_07.in
@@ -1,4 +1,22 @@
-3
-oxo
-xxx
-oxo
+21
+oxoxoxoooooooooooxooo
+oxoxoxxxxxxxxxxxxxxxx
+oxoxoxoxoooxoooxoxoxo
+oxoxoxxxxxxxoooxoxoxo
+oxoxoxoxoxoxoooxoxoxo
+oxxxxxoxoxoxoooxoxxxx
+oxoxoxoxoxoxoooxoxoxo
+oxoxoxoxxxxxoooxoxoxo
+oxoxoxoxoxoxoooxoxoxo
+oxoxoxxxxxxxxxxxoxoxo
+oxoxoxoooxoxoooxoxoxo
+oxoxoxxxxxxxoooxoxoxo
+oxoxoxoooxoxoooxoxoxo
+xxxxxxxxxxxxxxxxxxoxo
+oxoxoxoooooxoooxoxoxo
+oxxxxxxxxxxxxxxxoxoxo
+oxoxoxoooooxoooxoxoxo
+xxxxxxxxxxxxxxxxxxxxx
+oxoooxoooxooooooooooo
+xxxxxxxxxxxxxxxxxxxxx
+oxoooxoooxooooooooooo
