--- a/Fissure/tests/2_randsmall_09.in
+++ b/Fissure/tests/2_randsmall_09.in
@@ -1,8 +1,14 @@
-7
-oxoooxo
-oxxxxxx
-oxoooxo
-xxxxxxx
-oxoooxo
-oxxxxxx
-oxoooxo
+13
+oooxoooooxoxo
+xxxxxxxxxxoxo
+oxoxoxoooxoxo
+xxxxxxxxxxxxx
+oxoxoxoxoxoxo
+oxoxoxxxxxoxo
+oxoxoxoxoxoxo
+xxxxxxxxxxxxx
+oooooxoooxoxo
+xxxxxxxxxxoxo
+oxoooxoxoxoxo
+xxxxxxxxxxxxx
+oxoooxoxoxoxo
