--- a/Fissure/tests/2_randsmall_12.in
+++ b/Fissure/tests/2_randsmall_12.in
@@ -1,6 +1,22 @@
-5
-oxooo
-xxxxx
-oxoxo
-oxxxx
-oxoxo
+21
+oooxoooooooooooooxoxo
+xxxxxxxxxxxxxxxxxxoxo
+oooxoxoooooooooooxoxo
+oooxoxoooooooooooxoxo
+oooxoxoooooooooooxoxo
+oooxxxxxxxxxxxxxxxoxo
+oooxoxoooooooooooxoxo
+xxxxxxxxxxxxxxxxxxxxo
+oooooxoxoxoooooooxoxo
+xxxxxxxxxxxxxxxxxxoxo
+oooooxoxoxoooooooxoxo
+xxxxxxxxxxxxxxxxxxoxo
+oooooxoxoooooooxoxoxo
+oooooxoxxxxxxxxxxxoxo
+oooooxoxoooooooxoxoxo
+xxxxxxxxoooooooxoxoxo
+oooooxoxoooooooxoxoxo
+xxxxxxxxxxxxxxxxxxxxx
+oooooooooooooxoooooxo
+xxxxxxxxxxxxxxxxxxxxo
+oooooooooooooxoooooxo
