--- a/Fissure/tests/2_randsmall_14.in
+++ b/Fissure/tests/2_randsmall_14.in
@@ -1,8 +1,36 @@
-7
-oooooxo
-xxxxxxx
-oxoxoxo
-xxxxoxo
-oxoxoxo
-xxxxxxo
-oooxoxo
+35
+oooooxoxoxoooxoxoxoooooooooxoooooxo
+xxxxxxxxoxoooxoxoxoooooooooxxxxxxxx
+oooooxoxoxoooxoxoxoooooooooxoooooxo
+oooooxoxoxxxxxxxxxxxxxxxxxxxoooooxo
+oooooxoxoxoooxoxoxoooooooooxoooooxo
+oooooxoxoxxxxxxxxxxxxxxxxxxxoooooxo
+oooooxoxoxoooooxoooooooooooxoooooxo
+oooooxoxoxxxxxxxxxxxxxxxxxxxxxxxxxx
+oooooxoxoxoooooxoooxoxoooooxoooxooo
+xxxxxxxxxxoooooxoooxoxoooooxoooxooo
+oooooooxoxoooooxoooxoxoooooxoooxooo
+oooooooxoxxxxxxxxxxxxxxxxxxxxxxxxxx
+oooooooxoxoooooxoooxoxoooooxoooxooo
+oooooooxoxoooooxoooxoxoooooxoooxooo
+oooooooxoxoooooxoooxoxoooooxoooxooo
+oooooooxoxoooooxoooxoxoooooxoooxooo
+oooooooxoxoooooxoooxoxoooooxoooxooo
+oooooooxoxoooooxoooxoxoooooxoooxooo
+oooooooxoxoooooxoooxoxoooooxoooxooo
+oooooooxoxxxxxxxxxxxxxxxxxxxoooxooo
+oooooooxoxoooooooooxoooooooxoooxooo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+oooooxoxoxoxoooooooooooooxoooxoxooo
+oooooxoxoxoxoooooooooooooxoooxoxooo
+oooooxoxoxoxoooooooooooooxoooxoxooo
+xxxxxxxxoxoxxxxxxxxxxxxxxxxxxxoxooo
+oooxoxoxoxoxoooooooooooooxoooxoxooo
+oooxoxoxoxoxoooooooooooooxoooxoxooo
+oooxoxoxoxoxoooooooooooooxoooxoxooo
+xxxxxxoxoxoxoooooooooooooxoooxxxxxx
+oooxoxoxoxoxoooooooooooooxoooxoxooo
+oooxoxoxoxoxxxxxxxxxxxxxxxxxxxxxxxx
+oooxoxoxoxoxoooooooooooooooooxooooo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+oooooooxoxoxooooooooooooooooooooooo
