--- a/Fissure/tests/2_randsmall_16.in
+++ b/Fissure/tests/2_randsmall_16.in
@@ -1,8 +1,42 @@
-7
-oxoxoxo
-xxxxxxx
-oxoxoxo
-oxoxoxo
-oxoxoxo
-xxxxxxx
-oooxooo
+41
+oxoxoooooxoooooxoxoooooooxoxoxoooxooooooo
+oxoxoooooxxxxxxxxxoooooooxoxoxoooxooooooo
+oxoxoooooxoxoooxoxoooooooxoxoxoooxooooooo
+oxoxoooooxoxoooxoxxxxxxxxxxxoxoooxooooooo
+oxoxoooooxoxoooxoxoooooooxoxoxoooxooooooo
+oxxxxxxxxxxxxxxxoxoooooooxoxoxoooxooooooo
+oxoxoooooxoxoxoxoxoooooooxoxoxoooxooooooo
+oxoxoooooxoxxxxxoxoooooooxoxoxoooxooooooo
+oxoxoooooxoxoxoxoxoooooooxoxoxoooxooooooo
+oxoxoooooxoxoxoxoxoooooooxoxoxoooxooooooo
+oxoxoooooxoxoxoxoxoooooooxoxoxoooxooooooo
+xxxxxxxxxxoxoxoxoxoooooooxoxoxxxxxxxxxxxx
+oxoooxoooxoxoxoxoxoooooooxoxoxoxoxoooooxo
+oxoooxoooxxxxxxxxxxxxxxxxxxxoxoxoxoooooxo
+oxoooxoooxoooooooxoxoooooooxoxoxoxoooooxo
+oxoooxoooxoooooooxxxxxxxxxxxoxoxoxoooooxo
+oxoooxoooxoooooooxoxoooooooxoxoxoxoooooxo
+oxxxxxxxxxoooooooxoxoooooooxoxoxoxoooooxo
+oxoooxoxoxoooooooxoxoooooooxoxoxoxoooooxo
+oxoooxxxxxoooooooxoxoooooooxoxoxoxoooooxo
+oxoooxoxoxoooooooxoxoooooooxoxoxoxoooooxo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxoxoxoxoooooxo
+oooooxoooxoxoooooooooooooxoxoxoxoxoooooxo
+oooooxoooxoxoooooooooooooxoxoxxxxxoooooxo
+oooooxoooxoxoooooooooooooxoxoxoxoxoooooxo
+oooooxoooxoxxxxxxxxxxxxxxxxxoxoxoxxxxxxxx
+oooooxoooxoxoooxoooooooooxoxoxoxoxoooooxo
+xxxxxxxxxxoxoooxoooooooooxoxoxoxoxoooooxo
+oooooxoooxoxoooxoooooooooxoxoxoxoxoooooxo
+oooooxoooxoxxxxxxxxxxxxxxxoxoxoxoxoooooxo
+oooooxoooxoxoooxoooooooooxoxoxoxoxoooooxo
+oooooxoooxoxoooxoooooooooxoxoxoxoxoooooxo
+oooooxoooxoxoooxoooooooooxoxoxoxoxoooooxo
+oooooxoooxxxxxxxxxxxxxxxxxxxoxoxoxoooooxo
+oooooxoooxoxoooooooooooooooxoxoxoxoooooxo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxoxoxoooooxo
+oooooooooooooooooooooooooooxoxoxoxoooooxo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+oooooooooooooooxoooooooooooooxoooooooxooo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+oooooooooooooooxoooooooooooooxoooooooxooo
