--- a/Fissure/tests/2_randsmall_18.in
+++ b/Fissure/tests/2_randsmall_18.in
@@ -1,4 +1,38 @@
-3
-oxo
-xxx
-oxo
+37
+oooxoooooooooooooooxoooxooooooooooooo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+oxoxoxoxoxoxoxoooooxoxoxoxoxoxoooooxo
+oxoxoxoxoxoxoxoooooxoxoxxxxxxxxxxxxxo
+oxoxoxoxoxoxoxoooooxoxoxoxoxoxoooooxo
+oxoxoxoxoxoxoxoooooxoxoxoxoxoxoooooxo
+oxoxoxoxoxoxoxoooooxoxoxoxoxoxoooooxo
+oxoxoxoxoxoxxxxxxxxxoxoxoxoxoxoooooxo
+oxoxoxoxoxoxoxoooooxoxoxoxoxoxoooooxo
+oxoxoxoxoxxxxxxxxxxxoxoxxxxxxxxxxxxxo
+oxoxoxoxoxoxoooooooxoxoxoooxoooooooxo
+oxoxoxoxoxoxoooooooxoxoxoooxoooooooxo
+oxoxoxoxoxoxoooooooxoxoxoooxoooooooxo
+oxoxoxoxoxoxoooooooxoxoxoooxoooooooxo
+oxoxoxoxoxoxoooooooxoxoxoooxoooooooxo
+xxxxxxxxoxoxoooooooxxxxxoooxoooooooxo
+oxoxoxoxoxoxoooooooxoxoxoooxoooooooxo
+oxoxxxxxxxoxoooooooxoxoxxxxxxxxxxxxxx
+oxoxoooxoxoxoooooooxoxoxoooooooooooxo
+oxoxoooxoxoxoooooooxoxoxoooooooooooxo
+oxoxoooxoxoxoooooooxoxoxoooooooooooxo
+oxoxxxxxxxxxxxxxxxxxoxoxoooooooooooxo
+oxoxoooooxoooooooooxoxoxoooooooooooxo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+oooooooooooooxoooooxoooooxoooxoxoxooo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxoxoxooo
+oooooxoooxoooxoooooxoooooxoooxoxoxooo
+xxxxxxxxxxoooxoooooxoooooxoooxoxoxooo
+oooooxoooxoooxoooooxoooooxoooxoxoxooo
+xxxxxxxxxxxxxxoooooxoooooxoooxxxxxooo
+oooooooooxoooxoooooxoooooxoooxoxoxooo
+oooooooooxoooxoooooxxxxxxxxxxxxxxxooo
+oooooooooxoooxoooooxoooooooooxoooxooo
+oooooooooxoooxoooooxoooooooooxoooxooo
+oooooooooxoooxoooooxoooooooooxoooxooo
+oooooooooxoooxoooooxxxxxxxxxxxxxxxxxx
+oooooooooxoooxoooooxoooooooooooooxooo
