--- a/Fissure/tests/2_randsmall_19.in
+++ b/Fissure/tests/2_randsmall_19.in
@@ -1,6 +1,26 @@
-5
-oxooo
-xxxxx
-oxoxo
-oxxxx
-oxoxo
+25
+oooooooxoooooxoooxoxoooxo
+oooooooxxxxxxxxxxxoxoooxo
+oooooooxoooooxoooxoxoooxo
+xxxxxxxxxxxxxxxxxxoxoooxo
+oxoooxoxoxoooooooxoxoooxo
+xxxxxxoxxxxxxxxxxxoxoooxo
+oxoooxoxoxoooooooxoxoooxo
+xxxxxxxxoxoooooooxoxoooxo
+oooooxoxoxoooooooxoxoooxo
+xxxxxxxxxxxxxxxxxxxxxxxxx
+oooooooooooooooxoxoxoooxo
+xxxxxxxxxxxxxxxxxxoxoooxo
+oooooooooooooxoxoxoxoooxo
+xxxxxxxxxxxxxxxxoxoxoooxo
+oooooooooooooxoxoxoxoooxo
+xxxxxxxxxxxxxxxxxxxxxxxxx
+oxoxoooxoooooooooxoxoxooo
+oxoxxxxxxxxxxxxxxxoxoxooo
+oxoxoxoxoooooooooxoxoxooo
+xxxxxxxxoooooooooxoxoxooo
+oxoxoxoxoooooooooxoxoxooo
+oxoxxxxxxxxxxxxxxxxxoxooo
+oxoxoooooooooooooxoxoxooo
+xxxxxxxxxxxxxxxxxxxxxxxxx
+oooxoooooooooooooooxoxooo
