--- a/Fissure/tests/2_randsmall_20.in
+++ b/Fissure/tests/2_randsmall_20.in
@@ -1,4 +1,14 @@
-3
-oxo
-xxx
-oxo
+13
+oooooxoooxoxo
+xxxxxxxxxxxxx
+oooooxoooxoxo
+xxxxxxxxxxxxx
+oooxoooooxoxo
+xxxxxxxxxxoxo
+oxoxoooxoxoxo
+xxxxxxxxxxxxx
+oxoxoxoxoxoxo
+oxoxxxxxoxoxo
+oxoxoxoxoxoxo
+oxoxoxoxoxoxo
+oxoxoxoxoxoxo
