--- a/Fissure/tests/2_randsmall_21.in
+++ b/Fissure/tests/2_randsmall_21.in
@@ -1,6 +1,40 @@
-5
-oxoxo
-xxxxo
-oxoxo
-xxxxx
-oooxo
+39
+oooooooooooxoooxoxoooooooooooxoooooxooo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxoooooxooo
+oooooxoooooxoooxoxoooooooooooxoooooxooo
+xxxxxxxxxxxxoooxxxxxxxxxxxxxxxxxxxxxooo
+oooooxoooooxoooxoxoooooooooooxoooooxooo
+oooooxoooooxoooxoxoooooooooooxoooooxooo
+oooooxoooooxoooxoxoooooooooooxoooooxooo
+oooooxoooooxoooxxxxxxxxxxxxxxxoooooxooo
+oooooxoooooxoooxoxoooooooooooxoooooxooo
+oooooxoooooxoooxoxoooooooooooxoooooxooo
+oooooxoooooxoooxoxoooooooooooxoooooxooo
+oooooxoooooxoooxxxxxxxxxxxxxxxxxxxxxxxx
+oooooxoooooxoooxoooooooooooooooooooxooo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+oxoooxoxoxoxoxoxoxoooooooooooxooooooooo
+oxoooxxxxxoxoxoxoxoooooooooooxooooooooo
+oxoooxoxoxoxoxoxoxoooooooooooxooooooooo
+oxoooxoxoxoxoxoxoxxxxxxxxxxxxxxxxxxxxxx
+oxoooxoxoxoxoxoxoxoooooooooooxooooooooo
+oxoooxoxoxoxoxoxxxxxxxxxxxxxxxxxxxxxxxx
+oxoooxoxoxoxoxoxoxoooooooooooooooooooxo
+oxoooxoxoxoxxxxxoxoooooooooooooooooooxo
+oxoooxoxoxoxoxoxoxoooooooooooooooooooxo
+oxoooxoxoxoxoxoxoxxxxxxxxxxxxxxxxxxxxxx
+oxoooxoxoxoxoxoxoxoooooooxoxoxoxoooooxo
+oxoooxoxoxxxxxxxoxoooooooxoxoxoxoooooxo
+oxoooxoxoxoxoooxoxoooooooxoxoxoxoooooxo
+xxxxxxoxoxoxoooxoxoooooooxoxoxoxoooooxo
+oxoooxoxoxoxoooxoxoooooooxoxoxoxoooooxo
+xxxxxxxxxxoxoooxoxoooooooxoxoxxxxxxxxxo
+oooxoxoooxoxoooxoxoooooooxoxoxoxoxoooxo
+xxxxxxoooxoxoooxoxoooooooxxxxxoxxxxxxxo
+oooxoxoooxoxoooxoxoooooooxoxoxoxoxoooxo
+xxxxxxxxxxxxxxxxoxxxxxxxxxxxxxoxoxoooxo
+oooooxoooxoooxoxoxoooooooxoooxoxoxoooxo
+xxxxxxxxxxxxxxxxoxxxxxxxxxxxxxxxxxxxxxo
+oooxoxoooxoooxoxoxoooooooooooxoooooooxo
+xxxxxxoooxoooxoxoxoooooooooooxoooooooxo
+oooxoxoooxoooxoxoxoooooooooooxoooooooxo
