--- a/Fissure/tests/2_randsmall_22.in
+++ b/Fissure/tests/2_randsmall_22.in
@@ -1,4 +1,28 @@
-3
-oxo
-xxx
-oxo
+27
+oxoxoooooooooxoooxoooxooooo
+oxoxxxxxxxxxxxxxxxxxxxxxxxx
+oxoxoooxoooooxoooxoooxoooxo
+oxoxoooxoooooxoooxoooxoooxo
+oxoxoooxoooooxoooxoooxoooxo
+xxxxxxxxxxxxxxoooxoooxxxxxx
+oxoxoooxoooooxoooxoooxoxoxo
+xxxxxxxxxxxxxxxxxxoooxxxxxo
+oooxoooooooooooooxoooxoxoxo
+xxxxxxxxxxxxxxxxxxxxxxxxxxx
+oxoooxoooooooooooxoxoxooooo
+oxoooxoooooooooooxoxxxxxxxx
+oxoooxoooooooooooxoxoxoooxo
+oxxxxxxxxxxxxxxxxxoxoxoooxo
+oxoooxoooooooooooxoxoxoooxo
+xxxxxxxxxxxxxxxxxxoxoxxxxxx
+oxoooooooxoooooxoxoxoxoooxo
+oxoooooooxoooooxoxoxoxoooxo
+oxoooooooxoooooxoxoxoxoooxo
+oxoooooooxxxxxxxxxoxoxoooxo
+oxoooooooxoooooxoxoxoxoooxo
+oxxxxxxxxxxxxxxxxxxxxxxxxxx
+oxoooooooxoxoooooxoxooooooo
+oxoooooooxxxxxxxxxoxooooooo
+oxoooooooxoxoooooxoxooooooo
+oxoooooooxoxoooooxoxooooooo
+oxoooooooxoxoooooxoxooooooo
