--- a/Fissure/tests/2_randsmall_23.in
+++ b/Fissure/tests/2_randsmall_23.in
@@ -1,8 +1,28 @@
-7
-oxoxooo
-oxxxxxx
-oxoxoxo
-oxoxxxx
-oxoxoxo
-xxxxxxx
-oxooooo
+27
+oooxoooxoooooooxoooxoxoooxo
+oooxxxxxxxxxxxxxxxxxxxoooxo
+oooxoooxoooooooxoxoxoxoooxo
+xxxxxxxxxxxxxxxxoxoxoxxxxxx
+oooxoxoooxoooooxoxoxoxoooxo
+oooxoxxxxxxxxxxxoxoxoxoooxo
+oooxoxoooxoooooxoxoxoxoooxo
+oooxxxxxxxxxxxxxxxxxoxoooxo
+oooxoxoooxoooooxoxoxoxoooxo
+oooxoxxxxxxxxxxxxxxxxxxxxxx
+oooxoxoooxoooooxoooooxooooo
+oooxoxoooxoooooxoooooxooooo
+oooxoxoooxoooooxoooooxooooo
+xxxxxxxxxxxxxxxxxxxxxxxxxxx
+oxoooooooooooxoxoooxooooooo
+oxoooooooooooxoxxxxxxxxxxxx
+oxoooooooooooxoxoooxoooooxo
+xxxxxxxxxxxxxxoxoooxoooooxo
+oxoooooooooooxoxoooxoooooxo
+xxxxxxxxxxxxxxxxoooxoooooxo
+oxoxoooooooooxoxoooxoooooxo
+oxoxoooooooooxoxoooxoooooxo
+oxoxoooooooooxoxoooxoooooxo
+oxxxxxxxxxxxxxoxoooxoooooxo
+oxoxoooooooooxoxoooxoooooxo
+xxxxxxxxxxxxxxoxoooxxxxxxxx
+oxoooooooooooxoxoooxoooooxo
