--- a/Fissure/tests/2_randsmall_24.in
+++ b/Fissure/tests/2_randsmall_24.in
@@ -1,6 +1,32 @@
-5
-oxoxo
-xxxxo
-oxoxo
-xxxxx
-oooxo
+31
+oooooooooooooooxoxoooooxoooooxo
+xxxxxxxxxxxxxxxxxxoooooxxxxxxxx
+oxoooooooooooooxoxoooooxoooooxo
+xxxxxxxxxxxxxxxxoxoooooxoooooxo
+oxoooooooooooooxoxoooooxoooooxo
+xxxxxxxxxxxxxxxxxxxxxxxxoooooxo
+oooooooxoooooooooxoooooxoooooxo
+xxxxxxxxxxxxxxxxxxoooooxoooooxo
+oooooooxoooooooooxoooooxoooooxo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+oxoxoooxoxoxoxoooooooooxoxoxooo
+oxoxxxxxxxoxoxoooooooooxoxoxooo
+oxoxoooxoxoxoxoooooooooxoxoxooo
+oxoxoooxoxoxxxxxxxxxxxxxoxxxxxx
+oxoxoooxoxoxoxoooooooooxoxoxoxo
+oxoxoooxoxxxxxxxxxxxxxxxoxoxoxo
+oxoxoooxoxoxoooooooooooxoxoxoxo
+xxxxxxxxxxxxxxxxxxxxxxxxoxoxxxx
+oxoxoooooxoooooooooooooxoxoxoxo
+xxxxxxxxxxxxxxxxxxxxxxxxoxoxoxo
+oxoxoooooooooooooooooxoxoxoxoxo
+oxoxoooooooooooooooooxoxxxxxxxx
+oxoxoooooooooooooooooxoxoxoxoxo
+xxxxxxxxxxxxxxxxxxxxxxxxoxoxxxx
+oxoxoooooooxoooooooooxoxoxoxoxo
+oxoxoooooooxoooooooooxoxoxxxxxx
+oxoxoooooooxoooooooooxoxoxoxooo
+oxoxxxxxxxxxxxxxxxxxxxoxoxoxooo
+oxoxoxoooooxoooooooooxoxoxoxooo
+oxoxxxxxxxxxoooooooooxoxoxoxooo
+oxoxoxoooooxoooooooooxoxoxoxooo
