--- a/Fissure/tests/2_randsmall_25.in
+++ b/Fissure/tests/2_randsmall_25.in
@@ -1,4 +1,22 @@
-3
-oxo
-xxx
-oxo
+21
+oooooxoxoxoooxoxooooo
+oooooxoxoxoooxxxxxxxx
+oooooxoxoxoooxoxoxooo
+oooooxoxoxoooxoxoxooo
+oooooxoxoxoooxoxoxooo
+oooooxoxoxoooxoxxxxxx
+oooooxoxoxoooxoxoxooo
+xxxxxxxxoxoooxoxoxooo
+oxoxoxoxoxoooxoxoxooo
+oxoxoxoxoxxxxxxxxxxxx
+oxoxoxoxoxoxoxoooxooo
+oxxxxxoxoxxxxxxxxxxxx
+oxoxoxoxoxoxoxoooxooo
+oxoxoxoxxxxxxxxxxxxxx
+oxoxoxoxoxoooooooooxo
+xxxxxxoxoxxxxxxxxxxxx
+oxoooxoxoxoooooooooxo
+xxxxxxxxxxxxxxxxxxxxx
+oooooooxoxooooooooooo
+oooooooxxxxxxxxxxxxxx
+oooooooxoxooooooooooo
