--- a/Fissure/tests/2_randsmall_26.in
+++ b/Fissure/tests/2_randsmall_26.in
@@ -1,6 +1,18 @@
-5
-oxoxo
-oxxxx
-oxoxo
-xxxxx
-oxooo
+17
+oxoxoxoooxoxoooxo
+xxxxxxxxxxxxxxxxo
+oxoxoxoooxoxoooxo
+xxxxxxxxxxxxxxxxx
+oxoxoxoooxoxoooxo
+xxxxxxxxxxxxxxxxo
+oxoxoxoooxoxoooxo
+xxxxxxxxxxxxxxxxx
+oxoooooxoxoxooooo
+xxxxxxxxoxoxooooo
+oxoooooxoxoxooooo
+oxoooooxoxxxxxxxx
+oxoooooxoxoxoooxo
+xxxxxxxxxxoxxxxxx
+oooooxoxoxoxoooxo
+xxxxxxxxoxoxoooxo
+oooooxoxoxoxoooxo
