--- a/Fissure/tests/2_randsmall_27.in
+++ b/Fissure/tests/2_randsmall_27.in
@@ -1,8 +1,18 @@
-7
-oooxoxo
-xxxxxxo
-oxoxoxo
-xxxxoxo
-oxoxoxo
-xxxxxxx
-oooooxo
+17
+oxoooxooooooooooo
+oxxxxxxxxxxxxxxxx
+oxoxoxoooooxooooo
+oxoxoxxxxxxxxxxxx
+oxoxoxoxoooxoxooo
+oxoxoxoxoooxxxxxx
+oxoxoxoxoooxoxoxo
+oxoxoxxxxxxxoxoxo
+oxoxoxoxoxoxoxoxo
+oxoxoxoxxxxxoxoxo
+oxoxoxoxoxoxoxoxo
+oxxxxxoxoxoxoxoxo
+oxoxoxoxoxoxoxoxo
+oxoxoxoxoxoxoxxxx
+oxoxoxoxoxoxoxoxo
+xxxxxxxxxxxxxxxxx
+oxooooooooooooooo
