--- a/Fissure/tests/2_randsmall_28.in
+++ b/Fissure/tests/2_randsmall_28.in
@@ -1,6 +1,28 @@
-5
-oxoxo
-xxxxo
-oxoxo
-xxxxx
-oooxo
+27
+oooooooooooxoooooooooooxoxo
+oooooooooooxxxxxxxxxxxxxxxo
+oooooooooooxoooooooooooxoxo
+oooooooooooxxxxxxxxxxxxxxxx
+oooooooooooxoooooooooooooxo
+xxxxxxxxxxxxxxxxxxxxxxxxxxx
+oxoooooxoxoxoooooooxoooxoxo
+oxoooooxxxxxxxxxxxxxxxxxxxx
+oxoooooxoxoxoxoooxoxoxoxoxo
+oxxxxxxxxxxxoxoooxoxxxxxoxo
+oxoooooxoooxoxoooxoxoxoxoxo
+xxxxxxxxxxxxxxxxxxoxoxoxoxo
+oxoxoxoooooxoxoooxoxoxoxoxo
+oxoxoxoooooxxxxxxxxxoxoxoxo
+oxoxoxoooooxoooxoxoxoxoxoxo
+oxoxoxoooooxxxxxxxoxoxoxoxo
+oxoxoxoooooxoxoxoxoxoxoxoxo
+oxoxxxxxxxxxoxoxoxoxoxoxoxo
+oxoxoxoxoooxoxoxoxoxoxoxoxo
+oxoxoxoxoooxxxxxoxoxoxoxoxo
+oxoxoxoxoooxoxoxoxoxoxoxoxo
+oxoxoxxxxxxxoxoxoxoxoxoxoxo
+oxoxoxoxoooxoxoxoxoxoxoxoxo
+oxxxxxxxxxxxxxxxxxxxxxxxxxx
+oxoxoooooooxoxoooooooooxooo
+oxoxoooooooxxxxxxxxxxxxxooo
+oxoxoooooooxoxoooooooooxooo
