--- a/Fissure/tests/2_randsmall_29.in
+++ b/Fissure/tests/2_randsmall_29.in
@@ -1,4 +1,26 @@
-3
-oxo
-xxx
-oxo
+25
+oooxoooxoxoxoxooooooooooo
+xxxxxxxxoxxxxxooooooooooo
+oooxoxoxoxoxoxooooooooooo
+oooxoxoxoxoxoxooooooooooo
+oooxoxoxoxoxoxooooooooooo
+oooxoxoxoxxxxxxxxxxxxxxxx
+oooxoxoxoxoooxoooxooooooo
+oooxxxxxoxoooxxxxxxxxxxxx
+oooxoxoxoxoooxoooxooooooo
+oooxoxoxxxxxxxxxxxxxxxxxx
+oooxoxoxoxoooooooooooooxo
+oooxoxoxoxoooooooooooooxo
+oooxoxoxoxoooooooooooooxo
+oooxoxoxoxxxxxxxxxxxxxxxx
+oooxoxoxoxoooooooooooooxo
+xxxxxxxxxxxxxxxxxxxxxxxxx
+oooxoooxoooooooooooooooxo
+xxxxxxxxxxxxxxxxxxxxxxxxx
+oooxoooxoooooooxoooooxoxo
+oooxoooxxxxxxxxxxxxxxxoxo
+oooxoooxoooooooxoooooxoxo
+oooxoooxxxxxxxxxxxxxxxxxo
+oooxoooxoooooooooooxoxoxo
+oooxoooxxxxxxxxxxxxxxxoxo
+oooxoooxoooooooooooxoxoxo
