--- a/Fissure/tests/2_randsmall_30.in
+++ b/Fissure/tests/2_randsmall_30.in
@@ -1,6 +1,16 @@
-5
-oxoxo
-xxxxo
-oxoxo
-xxxxx
-oooxo
+15
+oxoxoooooxooooo
+xxxxxxxxxxxxxxx
+oxoxoooooxooooo
+xxxxxxxxxxxxxxx
+oxoxoooxooooooo
+oxoxxxxxxxxxxxx
+oxoxoxoxoooxoxo
+oxoxoxoxxxxxxxo
+oxoxoxoxoooxoxo
+xxxxxxxxxxxxxxx
+oxoxoxoxoooxoxo
+oxoxoxoxoooxoxo
+oxoxoxoxoooxoxo
+oxoxoxoxxxxxxxo
+oxoxoxoxoooxoxo
