--- a/Fissure/tests/2_randsmall_32.in
+++ b/Fissure/tests/2_randsmall_32.in
@@ -1,8 +1,32 @@
-7
-oxooooo
-xxxxxxx
-oxoxooo
-oxxxxxx
-oxoxoxo
-oxoxxxx
-oxoxoxo
+31
+oooxoxoooxoooxoooxoooxoxooooooo
+oooxxxxxxxoooxxxxxxxxxoxooooooo
+oooxoxoooxoooxoooxoooxoxooooooo
+oooxoxoooxoooxoooxoooxxxxxxxxxx
+oooxoxoooxoooxoooxoooxoxooooooo
+oooxoxoooxoooxxxxxxxxxxxxxxxxxx
+oooxoxoooxoooxoxoxoxoxoooooxooo
+oooxxxxxxxxxxxoxoxoxoxxxxxxxxxx
+oooxoooooxoooxoxoxoxoxoxoooxoxo
+xxxxxxxxxxxxxxoxoxoxoxoxoooxxxx
+oxoxoooooooxoxoxoxoxoxoxoooxoxo
+oxoxxxxxxxxxxxxxxxoxoxoxoooxoxo
+oxoxoooxoooxoxoxoxoxoxoxoooxoxo
+oxoxoooxoooxoxoxoxoxoxxxxxxxoxo
+oxoxoooxoooxoxoxoxoxoxoxoooxoxo
+oxoxoooxoooxoxoxoxxxxxoxoooxoxo
+oxoxoooxoooxoxoxoxoxoxoxoooxoxo
+xxxxxxxxxxxxoxxxxxxxxxoxoooxoxo
+oxoxoooxoxoxoxoooxoxoxoxoooxoxo
+oxoxoooxxxxxoxoooxxxxxoxoooxoxo
+oxoxoooxoxoxoxoooxoxoxoxoooxoxo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+oxoooooooooooxoxooooooooooooooo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+oxoooooooooooxoxoooooooxooooooo
+oxoooooooooooxoxxxxxxxxxxxxxxxx
+oxoooooooooooxoxoooooooxoooxooo
+oxoooooooooooxoxoooooooxoooxooo
+oxoooooooooooxoxoooooooxoooxooo
+oxoooooooooooxoxoooooooxxxxxxxx
+oxoooooooooooxoxoooooooxoooxooo
