--- a/Fissure/tests/2_randsmall_34.in
+++ b/Fissure/tests/2_randsmall_34.in
@@ -1,6 +1,20 @@
-5
-oxoxo
-oxxxx
-oxoxo
-xxxxx
-oxooo
+19
+oooxoxoxoxooooooooo
+xxxxxxoxxxxxxxxxxxx
+oooxoxoxoxoooooooxo
+xxxxxxxxoxxxxxxxxxx
+oooooxoxoxoooooooxo
+xxxxxxxxxxxxxxxxxxx
+oxoxoxoxoooooxoxoxo
+oxoxoxoxxxxxxxxxoxo
+oxoxoxoxoooooxoxoxo
+xxxxoxoxxxxxxxxxxxo
+oxoxoxoxoooooooxoxo
+oxoxoxoxxxxxxxxxxxx
+oxoxoxoxoooxoxoooxo
+oxoxxxxxxxxxxxoooxo
+oxoxoxoxoooxoxoooxo
+xxxxxxxxxxxxxxxxxxo
+oooxoooxoooooxoooxo
+oooxoooxoooooxoooxo
+oooxoooxoooooxoooxo
