--- a/Fissure/tests/2_randsmall_36.in
+++ b/Fissure/tests/2_randsmall_36.in
@@ -1,8 +1,20 @@
-7
-oxooooo
-xxxxxxx
-oxoooxo
-oxxxxxx
-oxoxoxo
-oxxxxxo
-oxoxoxo
+19
+oooooxoxoxoxoxoooxo
+xxxxxxxxxxxxxxxxxxo
+oxoooxoxoxoxoxoooxo
+xxxxxxoxoxoxxxxxxxx
+oxoxoxoxoxoxoooxoxo
+oxxxxxoxoxoxxxxxxxo
+oxoxoxoxoxoxoxoxoxo
+xxxxxxxxxxxxxxxxoxo
+oooooooxoooxoxoxoxo
+xxxxxxxxxxxxxxxxxxx
+oxoxoooooxoxoxooooo
+oxxxxxxxxxoxoxooooo
+oxoxoooooxoxoxooooo
+oxoxoooooxoxxxxxxxx
+oxoxoooooxoxoxoxooo
+oxxxxxxxxxxxoxxxxxx
+oxoooooooxoxoxoxooo
+xxxxxxxxxxxxoxoxooo
+oxoooooooooxoxoxooo
