--- a/Fissure/tests/2_randsmall_37.in
+++ b/Fissure/tests/2_randsmall_37.in
@@ -1,8 +1,14 @@
-7
-oooxoxo
-xxxxxxo
-oooxoxo
-xxxxxxx
-oxoooxo
-xxxxxxo
-oxoooxo
+13
+oooooxooooooo
+xxxxxxxxxxxxx
+oxoxoxoxoxoxo
+oxoxoxoxoxoxo
+oxoxoxoxoxoxo
+oxoxoxoxoxxxx
+oxoxoxoxoxoxo
+xxxxoxxxxxoxo
+oxoxoxoxoxoxo
+xxxxxxxxxxxxx
+oxoxoxoooxoxo
+xxxxoxoooxxxx
+oxoxoxoooxoxo
