--- a/Fissure/tests/2_randsmall_38.in
+++ b/Fissure/tests/2_randsmall_38.in
@@ -1,6 +1,28 @@
-5
-oxooo
-xxxxx
-oxoxo
-oxxxx
-oxoxo
+27
+oooooxoooxoooooxoooooxooooo
+xxxxxxxxxxoooooxxxxxxxxxxxx
+oooooxoooxoooooxoxoxoxoxoxo
+xxxxxxxxxxxxxxxxoxoxoxoxoxo
+oxoxoxoxoxoxoooxoxoxoxoxoxo
+oxoxoxoxoxoxoooxoxxxxxoxoxo
+oxoxoxoxoxoxoooxoxoxoxoxoxo
+xxxxoxxxxxxxxxxxoxoxoxoxoxo
+oxoxoxoxoxoxoxoxoxoxoxoxoxo
+oxoxoxoxoxoxoxoxoxoxoxoxoxo
+oxoxoxoxoxoxoxoxoxoxoxoxoxo
+xxxxxxoxoxoxxxxxoxoxoxoxoxo
+oxoxoxoxoxoxoxoxoxoxoxoxoxo
+xxxxoxoxoxoxoxoxxxxxxxoxxxx
+oxoxoxoxoxoxoxoxoxoxoxoxoxo
+xxxxxxxxxxoxoxoxoxoxoxxxxxx
+oooxoxoooxoxoxoxoxoxoxoxooo
+xxxxxxoooxoxoxoxoxxxxxoxooo
+oooxoxoooxoxoxoxoxoxoxoxooo
+xxxxxxxxxxxxxxxxxxxxxxxxxxx
+oooooooooxoxoooxoooooxooooo
+oooooooooxoxoooxoooooxooooo
+oooooooooxoxoooxoooooxooooo
+xxxxxxxxxxxxoooxxxxxxxxxxxx
+oooooooooxoxoooxoooooxoooxo
+xxxxxxxxxxxxxxxxoooooxxxxxx
+oooooooooooxoooxoooooxoooxo
