--- a/Fissure/tests/2_randsmall_40.in
+++ b/Fissure/tests/2_randsmall_40.in
@@ -1,6 +1,26 @@
-5
-oxoxo
-oxxxx
-oxoxo
-xxxxx
-oxooo
+25
+oooooooooooooooxooooooooo
+xxxxxxxxxxxxxxxxxxxxxxxxx
+oxoxoooooxoooooxoxoooooxo
+xxxxxxxxxxxxxxxxoxoooooxo
+oxoxoxoooxoxoooxoxoooooxo
+oxoxoxoooxxxxxxxoxxxxxxxx
+oxoxoxoooxoxoooxoxoxoooxo
+oxoxxxxxxxoxoooxoxoxoooxo
+oxoxoxoooxoxoooxoxoxoooxo
+oxoxoxoooxoxoooxoxoxoooxo
+oxoxoxoooxoxoooxoxoxoooxo
+oxoxoxoooxoxoooxoxoxoooxo
+oxoxoxoooxoxoooxoxoxoooxo
+xxxxxxxxxxxxxxxxoxxxxxxxo
+oooxoxoxoooooooxoxoxoooxo
+oooxoxxxxxxxxxxxoxoxoooxo
+oooxoxoxoooooooxoxoxoooxo
+oooxoxoxoooooooxoxoxoooxo
+oooxoxoxoooooooxoxoxoooxo
+oooxxxxxxxxxxxxxoxoxoooxo
+oooxoxoooooooxoxoxoxoooxo
+oooxoxxxxxxxxxxxxxxxxxxxx
+oooxoxoooxoooxoxoxoooooxo
+oooxoxxxxxxxxxoxoxxxxxxxx
+oooxoxoooxoooxoxoxoooooxo
