--- a/Fissure/tests/2_randsmall_41.in
+++ b/Fissure/tests/2_randsmall_41.in
@@ -1,6 +1,18 @@
-5
-oxoxo
-xxxxo
-oxoxo
-xxxxx
-oooxo
+17
+oxoxoxooooooooooo
+oxoxxxxxxxxxxxxxx
+oxoxoxoooooooooxo
+xxxxoxxxxxxxxxxxx
+oxoxoxoooooooooxo
+xxxxxxxxxxxxxxxxx
+oxoxoxoooooooooxo
+oxoxoxxxxxxxxxxxx
+oxoxoxoooooooooxo
+oxoxxxxxxxxxxxxxx
+oxoxoxoooxooooooo
+oxoxoxxxxxxxxxxxx
+oxoxoxoooxoxoooxo
+oxoxoxoooxoxxxxxx
+oxoxoxoooxoxoooxo
+xxxxoxoooxxxxxxxx
+oxoxoxoooxoxooooo
