--- a/Fissure/tests/2_randsmall_42.in
+++ b/Fissure/tests/2_randsmall_42.in
@@ -1,8 +1,12 @@
-7
-oooxoxo
-xxxxxxo
-oooxoxo
-xxxxxxx
-oooxoxo
-xxxxxxo
-oooxoxo
+11
+oxoooooxoxo
+xxxxxxxxxxx
+oxoooooxoxo
+xxxxxxxxxxx
+oooxoxoxoxo
+xxxxxxoxoxo
+oooxoxoxoxo
+xxxxxxxxoxo
+oxoooxoxoxo
+xxxxxxoxxxx
+oxoooxoxoxo
