--- a/Fissure/tests/2_randsmall_43.in
+++ b/Fissure/tests/2_randsmall_43.in
@@ -1,8 +1,12 @@
-7
-oxoxoxo
-xxxxxxx
-oxoxoxo
-xxxxxxx
-oxoxoxo
-xxxxxxx
-oxoxoxo
+11
+oxoxoxoxoxo
+xxxxxxxxoxo
+oxoxoxoxoxo
+xxxxxxxxoxo
+oxoxoxoxoxo
+xxxxxxxxxxx
+oxoxoxoxoxo
+xxxxxxxxxxx
+oooooxoxoxo
+xxxxxxxxxxx
+oooooxoxoxo
