--- a/Fissure/tests/2_randsmall_44.in
+++ b/Fissure/tests/2_randsmall_44.in
@@ -1,6 +1,14 @@
-5
-oooxo
-xxxxx
-oxoxo
-xxxxo
-oxoxo
+13
+oxoxoooxooooo
+oxoxxxxxxxxxx
+oxoxoooxooooo
+oxxxxxxxxxxxx
+oxoxoooxooooo
+oxoxxxxxxxxxx
+oxoxoooxooooo
+xxxxxxxxxxxxx
+oxoooooooooxo
+oxxxxxxxxxxxx
+oxoooooooxoxo
+oxxxxxxxxxxxo
+oxoooooooxoxo
