--- a/Fissure/tests/2_randsmall_45.in
+++ b/Fissure/tests/2_randsmall_45.in
@@ -1,8 +1,38 @@
-7
-oxoxoxo
-oxxxxxo
-oxoxoxo
-oxxxxxx
-oxoooxo
-xxxxxxx
-oxooooo
+37
+oooxoooooooxoxoooxoooxoooooooooooxooo
+xxxxxxxxxxxxxxxxxxoooxoooooooooooxooo
+oooxoooooooxoxoooxoooxoooooooooooxooo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxooo
+oxoooooooooxoooxoxoooxoooooooooooxooo
+xxxxxxxxxxxxoooxoxxxxxxxxxxxxxxxxxxxx
+oxoxoooooxoxoooxoxoxoooooxoxoooxoxoxo
+oxoxoooooxoxoooxoxoxxxxxxxxxxxxxxxoxo
+oxoxoooooxoxoooxoxoxoooxoxoxoooxoxoxo
+oxoxoooooxoxoooxoxoxoooxoxoxoooxoxoxo
+oxoxoooooxoxoooxoxoxoooxoxoxoooxoxoxo
+oxoxoooooxoxoooxoxoxxxxxxxoxoooxoxxxx
+oxoxoooooxoxoooxoxoxoooxoxoxoooxoxoxo
+oxoxoooooxoxxxxxxxoxxxxxxxxxxxxxxxoxo
+oxoxoooooxoxoooxoxoxoooooooxoooooxoxo
+oxoxxxxxxxxxoooxoxoxoooooooxoooooxoxo
+oxoxoooooxoxoooxoxoxoooooooxoooooxoxo
+oxxxxxxxxxxxoooxoxxxxxxxxxxxxxxxxxoxo
+oxoxoooooooxoooxoxoxoooooxoooooooxoxo
+oxoxoooooooxoooxoxoxxxxxxxxxxxxxxxoxo
+oxoxoooooooxoooxoxoxoooooxoooooooxoxo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+oxoxoooooxoooooooxoooooooooxooooooooo
+oxoxoooooxoooooooxxxxxxxxxxxxxxxxxxxx
+oxoxoooooxoooooooxoooooxoooxoooooxooo
+oxoxxxxxxxxxxxxxxxoooooxoooxoooooxooo
+oxoxoooooxoooooooxoooooxoooxoooooxooo
+oxoxoooooxoooooooxoooooxoooxoooooxooo
+oxoxoooooxoooooooxoooooxoooxoooooxooo
+oxoxoooooxoooooooxxxxxxxxxxxoooooxooo
+oxoxoooooxoooooooxoxoooxoooxoooooxooo
+xxxxoooooxoooooooxxxxxxxoooxxxxxxxxxx
+oxoxoooooxoooooooxoxoooxoooxoooooxooo
+xxxxxxxxxxxxxxxxxxoxoooxoooxoooooxooo
+oooxoooooooooxoooxoxoooxoooxoooooxooo
+oooxxxxxxxxxxxxxxxoxoooxoooxoooooxooo
+oooxoooooooooxoooxoxoooxoooxoooooxooo
