--- a/Fissure/tests/2_randsmall_04.in
+++ b/Fissure/tests/2_randsmall_04.in
@@ -1,4 +1,24 @@
-3
-oxo
-xxx
-oxo
+23
+oxoooxooooooooooooooooo
+oxxxxxxxxxxxxxxxxxxxxxx
+oxoxoxoooooooooooxooooo
+oxxxxxxxxxxxxxxxxxxxxxx
+oxoxoxoooooooooooxooooo
+xxxxxxxxxxxxxxxxxxxxxxx
+oxoxoxoxoxoooxoooxoxoxo
+oxoxoxoxoxoooxoooxxxxxo
+oxoxoxoxoxoooxoooxoxoxo
+oxoxoxoxxxxxxxoooxoxoxo
+oxoxoxoxoxoooxoooxoxoxo
+oxoxoxoxxxxxxxxxxxoxoxo
+oxoxoxoxoooooxoooxoxoxo
+oxoxoxxxxxxxxxxxxxxxxxx
+oxoxoxoxoooooooooxoooxo
+oxoxxxxxxxxxxxxxxxoooxo
+oxoxoxoooooooooooxoooxo
+oxxxxxxxxxxxxxxxxxoooxo
+oxoxoooooooooxoooxoooxo
+oxoxxxxxxxxxxxxxxxoooxo
+oxoxoooooooooxoooxoooxo
+oxxxxxxxxxxxxxxxxxxxxxx
+oxoooooooooooooooxooooo
