--- a/Fissure/tests/2_randsmall_11.in
+++ b/Fissure/tests/2_randsmall_11.in
@@ -1,8 +1,38 @@
-7
-oxoxoxo
-xxxxxxx
-oxoxoxo
-xxxxxxx
-oxoxoxo
-xxxxxxx
-oxoxoxo
+37
+oooooooooooooooooooooooxooooooooooooo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+oxoooxoxoxoooxoxoooxoxoxoxoooxoooxooo
+xxxxxxoxoxoooxoxoooxoxoxoxoooxoooxooo
+oxoooxoxoxoooxoxoooxoxoxoxoooxoooxooo
+oxoooxoxoxoooxxxxxxxoxoxoxoooxoooxooo
+oxoooxoxoxoooxoxoooxoxoxoxoooxoooxooo
+oxoooxoxoxoooxxxxxxxxxoxoxoooxoooxooo
+oxoooxoxoxoooxoooooxoxoxoxoooxoooxooo
+oxoooxoxoxoooxoooooxoxoxoxoooxoooxooo
+oxoooxoxoxoooxoooooxoxoxoxoooxoooxooo
+xxxxxxxxoxoooxoooooxoxoxoxoooxoooxooo
+oxoooxoxoxoooxoooooxoxoxoxoooxoooxooo
+xxxxxxoxoxxxxxxxxxxxxxoxoxoooxoooxooo
+oxoooxoxoxoooxoooooooxoxoxoooxoooxooo
+xxxxxxxxxxoooxoooooooxoxoxoooxoooxooo
+oooooooxoxoooxoooooooxoxoxoooxoooxooo
+oooooooxoxoooxoooooooxoxoxoooxoooxooo
+oooooooxoxoooxoooooooxoxoxoooxoooxooo
+oooooooxoxoooxoooooooxoxoxoooxoooxooo
+oooooooxoxoooxoooooooxoxoxoooxoooxooo
+xxxxxxxxxxxxxxxxxxxxxxoxxxxxxxxxxxxxx
+oooooooooxoooooooooooxoxoxoooxoooxooo
+oooooooooxoooooooooooxoxoxoooxoooxooo
+oooooooooxoooooooooooxoxoxoooxoooxooo
+xxxxxxxxxxxxxxxxxxxxxxxxoxoooxoooxooo
+oooooooooxoooooooooooxoxoxoooxoooxooo
+xxxxxxxxxxxxxxxxxxxxxxoxxxxxxxxxxxxxx
+oooooxoooxoooxoooooooxoxoooooxoxooooo
+xxxxxxxxxxoooxoooooooxoxoooooxoxooooo
+oooooxoooxoooxoooooooxoxoooooxoxooooo
+oooooxoooxoooxoooooooxoxoooooxxxxxxxx
+oooooxoooxoooxoooooooxoxoooooxoxooooo
+oooooxoooxxxxxxxxxxxxxoxoooooxoxooooo
+oooooxoooxoooxoooooooxoxoooooxoxooooo
+oooooxoooxoooxoooooooxoxoooooxoxooooo
+oooooxoooxoooxoooooooxoxoooooxoxooooo
