--- a/Fissure/tests/2_randsmall_13.in
+++ b/Fissure/tests/2_randsmall_13.in
@@ -1,6 +1,18 @@
-5
-oooxo
-xxxxx
-oxoxo
-xxxxo
-oxoxo
+17
+oooooooooooooooxo
+xxxxxxxxxxxxxxxxx
+oxoxoxoxoooxoxoxo
+xxxxxxxxoooxoxoxo
+oxoxoxoxoooxoxoxo
+xxxxxxxxxxxxxxoxo
+oxoxoooxoooxoxoxo
+oxoxoooxxxxxxxxxo
+oxoxoooxoooxoxoxo
+oxoxoooxxxxxxxoxo
+oxoxoooxoooxoxoxo
+xxxxoooxoooxoxoxo
+oxoxoooxoooxoxoxo
+xxxxxxxxxxxxxxxxo
+oooooooxoooxoooxo
+oooooooxxxxxxxxxo
+oooooooxoooxoooxo
