--- a/Fissure/tests/2_randsmall_15.in
+++ b/Fissure/tests/2_randsmall_15.in
@@ -1,4 +1,34 @@
-3
-oxo
-xxx
-oxo
+33
+oooooooooooooooooooxoooooooooxooo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxooo
+oooooxoooooooooooooxoooooooooxooo
+xxxxxxxxxxxxxxxxxxxxoooooooooxooo
+oooooxoooooooooooooxoooooooooxooo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+oxoooooxoooooooooooxoxoooooooxoxo
+oxoooooxoooooooooooxxxxxxxxxxxoxo
+oxoooooxoooooooooooxoxoooxoxoxoxo
+oxxxxxxxxxxxxxxxxxxxoxoooxoxoxoxo
+oxoooooxoooxoooooooxoxoooxoxoxoxo
+oxoooooxoooxoooooooxoxoooxxxxxxxx
+oxoooooxoooxoooooooxoxoooxoxoxoxo
+oxoooooxxxxxxxxxxxxxoxoooxoxoxoxo
+oxoooooxoooxoooooooxoxoooxoxoxoxo
+xxxxxxxxxxxxxxxxxxxxoxoooxoxoxoxo
+oxoooxoooooxoooxoooxoxoooxoxoxoxo
+oxoooxxxxxxxxxxxoooxoxoooxoxoxoxo
+oxoooxoooooxoooxoooxoxoooxoxoxoxo
+oxoooxoooooxoooxoooxoxoooxoxoxoxo
+oxoooxoooooxoooxoooxoxoooxoxoxoxo
+oxoooxxxxxxxxxxxxxxxoxxxxxxxxxoxo
+oxoooxoooooooooxoooxoxoooxoooxoxo
+oxxxxxxxxxxxxxxxxxxxoxoooxoooxoxo
+oxoooxoooooooooooooxoxoooxoooxoxo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxoxo
+oooxoooooooooooooooxoooooxoooxoxo
+xxxxxxxxxxxxxxxxxxxxoooooxoooxoxo
+oooxoxoooooooooooooxoooooxoooxoxo
+oooxoxoooooooooooooxoooooxoooxoxo
+oooxoxoooooooooooooxoooooxoooxoxo
+oooxxxxxxxxxxxxxxxxxxxxxxxxxxxoxo
+oooxoxoooooooooooooxoooooxoooxoxo
