--- a/Fissure/tests/2_randsmall_17.in
+++ b/Fissure/tests/2_randsmall_17.in
@@ -1,6 +1,24 @@
-5
-oooxo
-xxxxx
-oxoxo
-xxxxo
-oxoxo
+23
+oooooxooooooooooooooooo
+xxxxxxxxxxxxxxxxxxxxxxx
+oxoxoxoooooooxoxoooxoxo
+oxoxoxxxxxxxxxxxxxxxxxo
+oxoxoxoooooooxoxoooxoxo
+oxoxoxxxxxxxxxxxxxxxxxo
+oxoxoxoooxoxoooxoooxoxo
+oxoxoxoooxxxxxxxxxxxxxo
+oxoxoxoooxoxoxoxoxoxoxo
+oxoxoxoooxoxxxxxoxoxoxo
+oxoxoxoooxoxoxoxoxoxoxo
+oxoxoxoooxoxoxoxxxxxoxo
+oxoxoxoooxoxoxoxoxoxoxo
+oxoxoxxxxxxxxxxxoxoxoxo
+oxoxoxoxoxoooooxoxoxoxo
+oxoxoxoxoxoooooxoxoxoxo
+oxoxoxoxoxoooooxoxoxoxo
+xxxxoxxxxxoooooxoxoxoxo
+oxoxoxoxoxoooooxoxoxoxo
+oxoxoxxxxxxxxxxxxxxxxxx
+oxoxoxoooooooooooxoooxo
+xxxxxxxxxxxxxxxxxxxxxxo
+oooxoxoooooooooooxoooxo
