--- a/Fissure/tests/2_randsmall_35.in
+++ b/Fissure/tests/2_randsmall_35.in
@@ -1,4 +1,34 @@
-3
-oxo
-xxx
-oxo
+33
+oooooxoxoxoooooooooooxoxooooooooo
+xxxxxxxxoxoooooooooooxoxooooooooo
+oooxoxoxoxoooooooooooxoxooooooooo
+oooxoxoxxxxxxxxxxxxxxxoxooooooooo
+oooxoxoxoxoooooooooooxoxooooooooo
+oooxoxoxoxoooooooooooxxxxxxxxxxxx
+oooxoxoxoxoooooooooooxoxooooooooo
+xxxxxxoxxxxxxxxxxxxxxxxxxxxxxxxxx
+oooxoxoxoooooooooooooxooooooooooo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+oooxoxoxoooxoooooooxoxoxoooxooooo
+xxxxxxoxoooxoooooooxoxoxoooxooooo
+oooxoxoxoooxoooooooxoxoxoooxooooo
+oooxoxoxoooxoooooooxoxoxoooxooooo
+oooxoxoxoooxoooooooxoxoxoooxooooo
+oooxoxoxoooxxxxxxxxxxxoxxxxxxxxxx
+oooxoxoxoooxoooooooxoxoxoooxooooo
+oooxoxoxxxxxxxxxxxxxxxoxoooxooooo
+oooxoxoxoooxoooooooxoxoxoooxooooo
+oooxoxoxoooxxxxxxxxxxxxxxxxxxxxxx
+oooxoxoxoooxoooooooxoxoxooooooooo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+oooxoxoxoooooooooxoooxoooxooooooo
+oooxoxoxoooooooooxoooxoooxooooooo
+oooxoxoxoooooooooxoooxoooxooooooo
+xxxxxxoxoooooooooxoooxoooxooooooo
+oxoxoxoxoooooooooxoooxoooxooooooo
+xxxxoxoxoooooooooxoooxoooxooooooo
+oxoxoxoxoooooooooxoooxoooxooooooo
+oxoxoxoxxxxxxxxxxxxxxxxxxxxxxxxxx
+oxoxoxoxoooooooooxoooxoooxooooooo
+oxoxoxoxoooooooooxoooxoooxooooooo
+oxoxoxoxoooooooooxoooxoooxooooooo
