--- a/Fissure/tests/2_randsmall_46.in
+++ b/Fissure/tests/2_randsmall_46.in
@@ -1,8 +1,32 @@
-7
-oxoxooo
-oxxxxxx
-oxoxooo
-xxxxxxx
-oxoooxo
-oxxxxxx
-oxoooxo
+31
+oxoxoooooooooooxooooooooooooooo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+oxoxoooooooooooxooooooooooooooo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+oxoxoxoooooxoooxoxooooooooooooo
+oxoxoxoooooxoooxxxxxxxxxxxxxxxx
+oxoxoxoooooxoooxoxooooooooooooo
+oxoxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+oxoxoxoxoooxoooxoooooooooooooxo
+oxoxoxxxxxxxoooxxxxxxxxxxxxxxxx
+oxoxoxoxoooxoooxoooooooooooooxo
+oxoxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+oxoxoxoooooxoooxoooxoooooxooooo
+oxoxoxoooooxoooxoooxoooooxooooo
+oxoxoxoooooxoooxoooxoooooxooooo
+oxoxoxoooooxoooxoooxxxxxxxxxxxx
+oxoxoxoooooxoooxoooxoooooxooooo
+xxxxoxoooooxoooxxxxxxxxxxxxxxxx
+oxoxoxoooooxoooxoooxoooxooooooo
+oxoxxxxxxxxxoooxoooxoooxooooooo
+oxoxoxoxoooxoooxoooxoooxooooooo
+oxoxoxoxoooxoooxoooxoooxooooooo
+oxoxoxoxoooxoooxoooxoooxooooooo
+oxoxoxxxxxxxoooxoooxoooxooooooo
+oxoxoxoxoooxoooxoooxoooxooooooo
+oxoxoxoxoooxoooxoooxxxxxxxxxxxx
+oxoxoxoxoooxoooxoooxoooxooooooo
+oxoxoxoxoooxxxxxxxxxxxxxxxxxxxx
+oxoxoxoxoooxoooxooooooooooooooo
+oxoxoxoxoooxoooxooooooooooooooo
+oxoxoxoxoooxoooxooooooooooooooo
