--- a/Fissure/tests/2_randsmall_48.in
+++ b/Fissure/tests/2_randsmall_48.in
@@ -1,6 +1,38 @@
-5
-oxooo
-xxxxx
-oxoxo
-oxxxx
-oxoxo
+37
+oooooxoooooooooooooooxoooooooxoooooxo
+oooooxoooooooooooooooxoooooooxxxxxxxx
+oooooxoooooooooooooooxoooooooxoooooxo
+oooooxoooooooooooooooxoooooooxoooooxo
+oooooxoooooooooooooooxoooooooxoooooxo
+oooooxoooooooooooooooxxxxxxxxxxxxxxxx
+oooooxoooooooooooooooxoooooooxoooooxo
+xxxxxxxxxxxxxxxxxxxxxxoooooooxxxxxxxx
+oooooxoooooooooooooooxoooooooxoooooxo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+oooooooooooooxoxoooooxoooxoxoxoxooooo
+oooooooooooooxoxoooooxoooxoxxxxxooooo
+oooooooooooooxoxoooooxoooxoxoxoxooooo
+oooooooooooooxxxxxxxxxoooxoxxxxxxxxxx
+oooooooooooooxoxoooooxoooxoxoooxooooo
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxoooxooooo
+oooooxoooooooxoxoooooxoooxoxoooxooooo
+oooooxoooooooxoxoooooxxxxxxxxxxxxxxxx
+oooooxoooooooxoxoooooxoooxoxoooxoooxo
+xxxxxxxxxxxxxxoxoooooxoooxoxoooxoooxo
+oxoooxoooxoxoxoxoooooxoooxoxoooxoooxo
+oxoooxoooxoxoxxxxxxxxxoooxoxxxxxxxxxo
+oxoooxoooxoxoxoxoooxoxoooxoxoxoxoooxo
+oxoooxoooxoxoxoxoooxoxoooxoxoxoxoooxo
+oxoooxoooxoxoxoxoooxoxoooxoxoxoxoooxo
+oxoooxoooxxxxxoxxxxxxxoooxoxoxoxoooxo
+oxoooxoooxoxoxoxoxoxoxoooxoxoxoxoooxo
+oxoooxxxxxxxxxoxoxoxoxoooxoxxxxxoooxo
+oxoooxoooxoooxoxoxoxoxoooxoxoxoxoooxo
+xxxxxxoooxoooxoxoxoxoxxxxxxxoxoxoooxo
+oxoxoxoooxoooxoxoxoxoxoooxoxoxoxoooxo
+oxoxoxoooxoooxoxoxoxoxoooxoxoxoxoooxo
+oxoxoxoooxoooxoxoxoxoxoooxoxoxoxoooxo
+oxxxxxoooxoooxoxoxoxoxoooxoxxxxxxxxxx
+oxoxoxoooxoooxoxoxoxoxoooxoxoooooooxo
+oxoxoxoooxoooxoxxxxxoxoooxoxoooooooxo
+oxoxoxoooxoooxoxoxoxoxoooxoxoooooooxo
